--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,8 @@
-##################################
-#                                #
-# Feel free to edit this file :) #
-#                                #
-##################################
-
 logo: /images/isomer-logo.svg
-
 links:
+  - title: What we do
+    url: /permalink
+    sublinks: []
   - title: Contact Us
     url: /contact-us/
   - title: Example Page
