--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,9 @@ links:
     sublinks: []
   - title: Contact Us
     url: /contact-us/
+  - title: Join Us
+    url: /permalink
+    sublinks: []
   - title: Example Page
     url: /example-page/
   - title: Example Collection
