--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,5 +12,5 @@ links:
     url: /example-page/
   - title: Example Collection
     collection: example-collection
-  - title: Resource
+  - title: Newsroom
     resource_room: true
