--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,12 +2,8 @@ logo: /images/isomer-logo.svg
 links:
   - title: About Us
     collection: about-us
-  - title: What we do
-    url: /permalink
-    sublinks: []
-  - title: Join Us
-    url: /permalink
-    sublinks: []
+  - title: What We Do
+    collection: what-we-do
   - title: Contact Us
     url: /contact-us/
   - title: Example Page
