--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ links:
     collection: about-us
   - title: What We Do
     collection: what-we-do
+  - title: Join Us
+    collection: join-us
   - title: Contact Us
     url: /contact-us/
   - title: Example Page
