--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ links:
     collection: what-we-do
   - title: Join Us
     collection: join-us
+  - title: Stories
+    collection: stories
   - title: Contact Us
     url: /contact-us/
   - title: Example Page
