--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,9 +8,7 @@ links:
     collection: join-us
   - title: Stories
     collection: stories
-  - title: Contact Us
-    url: /contact-us/
-  - title: Example Page
-    url: /example-page/
   - title: Newsroom
     resource_room: true
+  - title: Highlights
+    collection: about-us
