--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: South West CDC
 url: ""
 favicon: /images/favicon-isomer.ico
 colors:
-  primary-color: "#6031b6"
+  primary-color: "#fd7e14"
   secondary-color: "#4372d6"
   media-colors:
     - title: media-color-one
