--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,5 +2,6 @@ collections:
   about-us:
     output: true
     order:
+      - About the CDC/About South West CDC.md
       - About the CDC/About South West District.md
       - About the CDC/.keep
