--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - CDC Report.md
       - A Word From Yen Ling.md
       - About the CDC/Mission.md
       - About the CDC/Vision.md
