--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: South West CDC
 url: ""
-favicon: /images/favicon-isomer.ico
+favicon: /images/favicon.ico
 colors:
   primary-color: "#fd7e14"
   secondary-color: "#000000"
