--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,5 +21,5 @@ links:
         url: /e-bridge
       - title: Gallery
         url: /gallery
-      - title: Annoucements
-        url: /annoucements
+      - title: Announcements
+        url: /announcements
