--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -2,6 +2,7 @@ collections:
   what-we-do:
     output: true
     order:
+      - FOR ENVIRONMENT.md
       - FOR ASSISTANCE.md
       - FOR GROUND UP INITIATIVES.md
       - CARE FOR THE VULNERABLE.md
