--- a/_join-us/collection.yml
+++ b/_join-us/collection.yml
@@ -2,5 +2,6 @@ collections:
   join-us:
     output: true
     order:
+      - Our Partner  Koh Kock Leong Enterprise Pte Ltd.md
       - Our Partner Procter & Gamble.md
       - Be Our Corporate Partner.md
