--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -2,6 +2,7 @@ collections:
   stories:
     output: true
     order:
+      - The Girls’ Brigade Friend In Deed @ South West.md
       - DIY TraceTogether Pouches With Mdm Fang.md
       - Sandrias Journey In Finding A Full Time Job.md
       - Leading The Charge To Meet Needs.md
