--- a/_highlights/collection.yml
+++ b/_highlights/collection.yml
@@ -2,5 +2,6 @@ collections:
   highlights:
     output: true
     order:
+      - Fortune Bags Distribution As Part Of Festive Cheers @ South West.md
       - Grant A Wish With LIAS @ South West.md
       - Highlights.md
