--- a/_highlights/collection.yml
+++ b/_highlights/collection.yml
@@ -2,6 +2,7 @@ collections:
   highlights:
     output: true
     order:
+      - Project Appreciation @ South West.md
       - Festive Cheers @ South West.md
       - Clean Up South West  2022 And Launch Of Share Your Book @ South West.md
       - Fortune Bags Distribution As Part Of Festive Cheers @ South West.md
