--- a/_highlights/collection.yml
+++ b/_highlights/collection.yml
@@ -2,6 +2,7 @@ collections:
   highlights:
     output: true
     order:
+      - ExxonMobil Gift Pack Distribution.md
       - Launch Of “Woke Wednesday” Campaign.md
       - Project Appreciation @ South West.md
       - Festive Cheers @ South West.md
