--- a/_highlights/collection.yml
+++ b/_highlights/collection.yml
@@ -2,6 +2,7 @@ collections:
   highlights:
     output: true
     order:
+      - Re Post Campaign With SingPost.md
       - AmCham Singapore Care Packs Distribution.md
       - ExxonMobil Gift Pack Distribution.md
       - Launch Of “Woke Wednesday” Campaign.md
