--- a/_highlights/collection.yml
+++ b/_highlights/collection.yml
@@ -2,6 +2,7 @@ collections:
   highlights:
     output: true
     order:
+      - Girl Guides Cookie Distribution.md
       - South West Community Job Fair.md
       - Re Post Campaign With SingPost.md
       - AmCham Singapore Care Packs Distribution.md
