--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -12,4 +12,4 @@ collections:
       - FOR STUDENTS.md
       - FOR CORPORATES.md
       - FOR CAREGIVERS.md
-      - FOR HEALTHY LIVING.md
+      - For Healthy Living.md
