--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -11,5 +11,5 @@ collections:
       - FOR ENVIRONMENT.md
       - FOR STUDENTS.md
       - FOR CORPORATES.md
-      - FOR CAREGIVERS.md
+      - For Caregivers.md
       - For Healthy Living.md
