--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -10,6 +10,6 @@ collections:
       - FOR ASSISTANCE.md
       - FOR ENVIRONMENT.md
       - FOR STUDENTS.md
-      - FOR CORPORATES.md
+      - For Corporates.md
       - For Caregivers.md
       - For Healthy Living.md
