--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -9,7 +9,7 @@ collections:
       - FOR GROUND UP INITIATIVES.md
       - FOR ASSISTANCE.md
       - FOR ENVIRONMENT.md
-      - FOR STUDENTS.md
+      - For Students.md
       - For Corporates.md
       - For Caregivers.md
       - For Healthy Living.md
