--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -8,7 +8,7 @@ collections:
       - CARE FOR THE VULNERABLE.md
       - FOR GROUND UP INITIATIVES.md
       - FOR ASSISTANCE.md
-      - FOR ENVIRONMENT.md
+      - For Environment.md
       - For Students.md
       - For Corporates.md
       - For Caregivers.md
