--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -7,7 +7,7 @@ collections:
       - FOR LIFELONG LEARNING.md
       - CARE FOR THE VULNERABLE.md
       - FOR GROUND UP INITIATIVES.md
-      - FOR ASSISTANCE.md
+      - For Assistance.md
       - For Environment.md
       - For Students.md
       - For Corporates.md
