--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -6,7 +6,7 @@ collections:
       - FOR FAMILIES.md
       - FOR LIFELONG LEARNING.md
       - CARE FOR THE VULNERABLE.md
-      - FOR GROUND UP INITIATIVES.md
+      - For Ground Up Initiatives.md
       - For Assistance.md
       - For Environment.md
       - For Students.md
