--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -5,7 +5,7 @@ collections:
       - New In.md
       - FOR FAMILIES.md
       - FOR LIFELONG LEARNING.md
-      - CARE FOR THE VULNERABLE.md
+      - Care For The Vulnerable.md
       - For Ground Up Initiatives.md
       - For Assistance.md
       - For Environment.md
