--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - New In.md
       - FOR FAMILIES.md
-      - FOR LIFELONG LEARNING.md
+      - For Lifelong Learning.md
       - Care For The Vulnerable.md
       - For Ground Up Initiatives.md
       - For Assistance.md
