--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - New In.md
-      - FOR FAMILIES.md
+      - For Families.md
       - For Lifelong Learning.md
       - Care For The Vulnerable.md
       - For Ground Up Initiatives.md
