--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -2,6 +2,7 @@ collections:
   what-we-do:
     output: true
     order:
+      - FOR GROUND UP INITIATIVES/FOR GROUND UP INITIATIVES.md
       - FOR GROUND UP INITIATIVES/.keep
       - New In.md
       - For Families.md
