--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -6,6 +6,7 @@ collections:
       - For Families.md
       - For Lifelong Learning.md
       - Care For The Vulnerable.md
+      - FOR GROUND UP INITIATIVES/South West Happy Fund.md
       - FOR GROUND UP INITIATIVES/.keep
       - FOR GROUND UP INITIATIVES/FOR GROUND UP INITIATIVES.md
       - For Assistance.md
