--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -7,7 +7,7 @@ collections:
       - For Lifelong Learning.md
       - Care For The Vulnerable.md
       - FOR GROUND UP INITIATIVES/.keep
-      - FOR GROUND UP INITIATIVES/FOR GROUND UP INITIATIVES.md
+      - FOR GROUND UP INITIATIVES/For Ground Up Initiatives.md
       - FOR GROUND UP INITIATIVES/South West Happy Fund.md
       - FOR GROUND UP INITIATIVES/South West Innovation Fund.md
       - For Assistance.md
