--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -6,10 +6,10 @@ collections:
       - For Families.md
       - For Lifelong Learning.md
       - Care For The Vulnerable.md
-      - FOR GROUND UP INITIATIVES/.keep
-      - FOR GROUND UP INITIATIVES/For Ground Up Initiatives.md
-      - FOR GROUND UP INITIATIVES/South West Happy Fund.md
-      - FOR GROUND UP INITIATIVES/South West Innovation Fund.md
+      - For Ground Up Initiatives/.keep
+      - For Ground Up Initiatives/For Ground Up Initiatives.md
+      - For Ground Up Initiatives/South West Happy Fund.md
+      - For Ground Up Initiatives/South West Innovation Fund.md
       - For Assistance.md
       - For Environment/.keep
       - For Environment/For Environment.md
