--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -2,6 +2,7 @@ collections:
   what-we-do:
     output: true
     order:
+      - For Assistance/Integrated Care Programme @ South West.md
       - For Assistance/Adopt @ South West.md
       - For Assistance/Kong Meng San (KMS) CDC COVID19 Relief Fund.md
       - For Assistance/For Assistance.md
