--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -2,6 +2,7 @@ collections:
   what-we-do:
     output: true
     order:
+      - For Students/For Students.md
       - For Students/.keep
       - New In.md
       - For Families.md
