--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -2,6 +2,7 @@ collections:
   what-we-do:
     output: true
     order:
+      - For Caregivers/.keep
       - For Students/.keep
       - For Students/For Students.md
       - For Students/South West CDC Koh Kock Leong (KKL) Graduate Relief &
