--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -2,6 +2,7 @@ collections:
   what-we-do:
     output: true
     order:
+      - For Caregivers/Caregiving @ South West.md
       - For Caregivers/South West Caregiver Care Guide.md
       - For Caregivers/South West Caregiver Friendly Workplace Advisory.md
       - For Caregivers/South West Caregiver Support Fund.md
