--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -6,6 +6,8 @@ collections:
       - For Families.md
       - For Lifelong Learning.md
       - Care For The Vulnerable.md
+      - For Ground Up Initiatives/WeCare Arts Fund And WeCare Arts Experiences @
+        South West.md
       - For Ground Up Initiatives/.keep
       - For Ground Up Initiatives/For Ground Up Initiatives.md
       - For Ground Up Initiatives/South West Happy Fund.md
