--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -2,6 +2,7 @@ collections:
   what-we-do:
     output: true
     order:
+      - Health Qigong @ South West.md
       - Fun Walkers @ South West.md
       - New In.md
       - For Families.md
