--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -4,7 +4,5 @@ feedback: null
 faq: /faq/
 social_media:
   facebook: https://www.facebook.com/southwestcdc/
-  twitter: ""
   youtube: https://www.youtube.com/user/southwestcdc
-  instagram: https://www.instagram.com/southwest
-  linkedin: ""
+  instagram: https://www.instagram.com/southwest.cdc
