--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -2,6 +2,7 @@ collections:
   what-we-do:
     output: true
     order:
+      - SkillsFuture/SkillsFuture.md
       - SkillsFuture/.keep
       - New In.md
       - For Families.md
