--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -2,6 +2,7 @@ collections:
   stories:
     output: true
     order:
+      - Stories.md
       - Turning Trash Into Treasure.md
       - Building A Greener South West District.md
       - Leading The Charge To Meet Needs.md
