--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -25,6 +25,7 @@ collections:
       - For Assistance/Kong Meng San (KMS) CDC COVID19 Relief Fund.md
       - For Assistance/Adopt @ South West.md
       - For Assistance/Integrated Care Programme @ South West.md
+      - For Environment/Engagement With Elderly Community Gardeners.md
       - For Environment/Green Spaces @ South West.md
       - For Environment/.keep
       - For Environment/For Environment.md
