--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -25,6 +25,7 @@ collections:
       - For Assistance/Kong Meng San (KMS) CDC COVID19 Relief Fund.md
       - For Assistance/Adopt @ South West.md
       - For Assistance/Integrated Care Programme @ South West.md
+      - For Environment/Share Your Book @ South West.md
       - For Environment/Zero Waste Testbed Initiative @ South West.md
       - For Environment/Sustainable South West Masterplan.md
       - For Environment/Clean Up South West!.md
