--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -2,6 +2,7 @@ collections:
   stories:
     output: true
     order:
+      - Building A Greener South West District.md
       - Turning Trash Into Treasure.md
       - Stories.md
       - Stories/.keep
