--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -2,6 +2,7 @@ collections:
   stories:
     output: true
     order:
+      - Shakthi’s Care & Share Corner.md
       - Sandrias Journey In Finding A Full Time Job.md
       - Leading The Charge To Meet Needs.md
       - Building A Greener South West District.md
