--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -2,6 +2,7 @@ collections:
   stories:
     output: true
     order:
+      - DIY TraceTogether Pouches With Mdm Fang.md
       - The Girls’ Brigade Friend In Deed @ South West.md
       - Shakthi’s Care & Share Corner.md
       - Sandrias Journey In Finding A Full Time Job.md
