--- a/_example-collection/collection.yml
+++ b/_example-collection/collection.yml
@@ -2,5 +2,6 @@ collections:
   example-collection:
     output: true
     order:
+      - South West Community Job Fair.md
       - example-page/.keep
       - example-page/example-subpage.md
