--- a/_highlights/collection.yml
+++ b/_highlights/collection.yml
@@ -2,6 +2,7 @@ collections:
   highlights:
     output: true
     order:
+      - SkillsFuture Festival @ South West 2022.md
       - Highlights.md
       - Grant A Wish With LIAS @ South West.md
       - Fortune Bags Distribution As Part Of Festive Cheers @ South West.md
