--- a/_highlights/collection.yml
+++ b/_highlights/collection.yml
@@ -2,6 +2,7 @@ collections:
   highlights:
     output: true
     order:
+      - Young Technopreneur Challenge.md
       - Community Guiding Programme.md
       - SkillsFuture Festival @ South West 2022.md
       - Highlights.md
