--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -23,7 +23,7 @@ collections:
       - For Environment/Share Your Book @ South West.md
       - For Environment/Zero Waste Testbed Initiative @ South West.md
       - For Environment/Sustainable South West Masterplan.md
-      - For Environment/Clean Up South West!.md
+      - For Environment/Clean Up @ South West!.md
       - For Environment/South West Eco Fund Plus.md
       - For Environment/Engagement With Elderly Community Gardeners.md
       - For Environment/Green Spaces @ South West.md
