chore(Amplify-Migration): update config.yml file

--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,8 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-remote-theme
-staging: https://pa-cdcsw-staging.netlify.app
-prod: https://pa-cdcsw-prod.netlify.app
+staging: https://staging.d293bxj1fiadz2.amplifyapp.com/
+prod: https://master.d293bxj1fiadz2.amplifyapp.com/
 shareicon: /images/isomer-logo.svg
 is_government: false
 facebook-pixel: ""
