--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -28,8 +28,7 @@ collections:
       - For Environment/Green Spaces @ South West.md
       - For Students/.keep
       - For Students/For Students.md
-      - For Students/South West CDC Koh Kock Leong (KKL) Graduate Relief &
-        Individual Training (GRIT) Fund.md
+      - For Students/South West Tertiary Grant.md
       - For Students/Other South West CDC Schemes & Bursaries.md
       - For Corporates/.keep
       - For Corporates/For Corporates.md
