--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -11,6 +11,7 @@ collections:
       - For Ground Up Initiatives/WeCare Arts Fund And WeCare Arts Experiences @
         South West.md
       - For Ground Up Initiatives/South West Youth Fund.md
+      - For Assistance/Care For The Vulnerable.md
       - For Assistance/.keep
       - For Assistance/For Assistance.md
       - For Assistance/Adopt @ South West.md
