--- a/_remove-page/collection.yml
+++ b/_remove-page/collection.yml
@@ -2,4 +2,5 @@ collections:
   remove-page:
     output: true
     order:
+      - Integrated Care Programme @ South West.md
       - South West Happy Fund.md
