{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"199"}

--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -19,7 +19,7 @@ collections:
       - For Environment/.keep
       - For Environment/For Environment.md
       - For Environment/Share Your Book @ South West.md
-      - For Environment/Zero Waste Testbed Initiative @ South West.md
+      - For Environment/Collaboration – Zero Waste Testbed Initiative.md
       - For Environment/Sustainable South West Masterplan.md
       - For Environment/Clean Up @ South West!.md
       - For Environment/South West Eco Fund Plus.md
