--- a/_remove-page/collection.yml
+++ b/_remove-page/collection.yml
@@ -2,5 +2,6 @@ collections:
   remove-page:
     output: true
     order:
+      - South West Caregiver Friendly Workplace Advisory.md
       - Integrated Care Programme @ South West.md
       - South West Happy Fund.md
