{"message":"Update file: collection.yml","userId":"199","fileName":"collection.yml"}

--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -16,6 +16,7 @@ collections:
       - For Assistance/Adopt @ South West.md
       - For Assistance/South West Community Caring Fund.md
       - For Assistance/Care For The Vulnerable.md
+      - For Environment/Sustainable South West Masterplan.md
       - For Environment/.keep
       - For Environment/For Environment.md
       - For Environment/Share Your Book @ South West.md
