--- a/_config.yml
+++ b/_config.yml
@@ -57,4 +57,4 @@ is_government: false
 facebook-pixel: ""
 google_analytics: UA-215064264-2
 linkedin-insights: ""
-google_analytics_ga4: G-Y1X47RXTH8
+google_analytics_ga4: G-349JBH2L3E
