{"message":"Update file: collection.yml","userId":"4366","fileName":"collection.yml"}

--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -21,7 +21,7 @@ collections:
       - For Corporates/SME Centre@Southwest.md
       - For Environment/.keep
       - For Environment/For Environment.md
-      - For Environment/Zero Waste Testbed Initiative @ South West.md
+      - For Environment/Sustainability Living Testbed Initiative @ South West.md
       - For Environment/Sustainable South West Masterplan.md
       - For Environment/Clean Up @ South West.md
       - For Environment/South West Eco Fund Plus.md
